- Improved: Updated translations
- Fixed: Filter didn't work on master data products page (#370)
- Fixed: Don't show inactive products on consume & purchase page (#382)
- Fixed: 'Add' button was gone in shopping lists bottom sheet
- Fixed: Location filter in new stock overview now behaves like on server (#248)
- Fixed: Products are hidden in new stock overview if "hide on stock" is active

2.0.0-alpha05
- Improved: Language selection and behavior
- Improved: Display exact error message if there was an AuthFailureError at login (#249)
- Improved: Updated translations
- Fixed: Wrong factor for unit multiplies on shopping list item edit page (#356)
- Fixed: Wrong language selected if code contains specific region (#372)
- Fixed: Language change does not effect shortcuts (#373)

2.0.0-alpha04
- New: Animated splash screen and logo
- Improved: Keyboard does't hide save/clear buttons on text input sheet anymore (#261)
- Improved: Added help texts to login form (shown with Home Assistant add-on)
- Improved: Updated translations
- Fixed: RuntimeExceptions in log if Home Assistant grocy add-on is not used (#273)
- Fixed: Mixed languages if activity is restarted (#260)
- Fixed: Language variants not working (#264)
- Fixed: Updates to master data were pushed to the wrong server (#363)
- Fixed: Login with Home Assistant grocy add-on using Nabu Casa service (#249)
- Fixed: Save bottom notes on shopping mode page not working (#362)
- Fixed: Updated bottom notes not displayed in shopping list

2.0.0-alpha03
- New: Official support for Home Assistant grocy add-on (#249)
- New: App can handle username:password in server URL for HTTP authentication (#273)
- Improved: Rewritten login flow
- Improved: Update certificate compatibility information
- Improved: Demo server changes when the language is changed (#346)
- Improved: Price and store lines on purchase page confirmation bottom sheet
- Improved: Updated translations
- Fixed: Crash when open store selection on purchase page (#347)