@@ -14,6 +14,7 @@
 - Fixed: 'Add' button was gone in shopping lists bottom sheet
 - Fixed: Location filter in new stock overview now behaves like on server (#248)
 - Fixed: Products are hidden in new stock overview if "hide on stock" is active
+- Fixed: Quick consume & open work again in stock overview (#386)
 
 2.0.0-alpha05
 - Improved: Language selection and behavior
